--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -23,7 +23,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Deploy to Server
-        run: |
-          ssh root@45.153.69.67 'cd /test-server/test-repo'
-        env:
+        uses: easingthemes/ssh-deploy@main
+        with:
           SSH_PRIVATE_KEY: ${{ secrets.SSH_PRIVATE_KEY }}
+          REMOTE_HOST: ${{secrets.REMOTE_HOST}}
+          REMOTE_USER: ${{secrets.REMOTE_USER}}
